update strategies update error handling